--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,12 @@ dependencies {
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    //glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
 
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
 }
