--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".DetailActivity"></activity>
         <activity android:name=".TambahData"></activity>
+        <activity android:name=".FavoritActivity"></activity>
     </application>
 
 </manifest>
